// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoReducer CreateSuccess should add a todo to the todo state 1`] = `
Object {
  "allTodoFilter": 2,
  "allTodoFilterString": null,
  "entities": Object {
    "1": Object {
      "completed": true,
      "description": "some description",
      "id": "1",
      "title": "some title",
      "user": "1",
    },
    "2": Object {
      "completed": false,
      "description": "another description",
      "id": "2",
      "title": "another title",
      "user": "1",
    },
  },
  "ids": Array [
    "1",
    "2",
  ],
  "selectedTodoId": null,
}
`;

exports[`TodoReducer DeleteSuccess should delete the todo from the sate 1`] = `
Object {
  "allTodoFilter": 2,
  "allTodoFilterString": null,
  "entities": Object {
    "1": Object {
      "completed": true,
      "description": "some description",
      "id": "1",
      "title": "some title",
      "user": "1",
    },
  },
  "ids": Array [
    "1",
  ],
  "selectedTodoId": null,
}
`;

exports[`TodoReducer LoadSuccess should add the todos to the todo state 1`] = `
Object {
  "allTodoFilter": 2,
  "allTodoFilterString": null,
  "entities": Object {
    "1": Object {
      "completed": true,
      "description": "some description",
      "id": "1",
      "title": "some title",
      "user": "1",
    },
    "2": Object {
      "completed": false,
      "description": "another description",
      "id": "2",
      "title": "another title",
      "user": "1",
    },
  },
  "ids": Array [
    "1",
    "2",
  ],
  "selectedTodoId": null,
}
`;

exports[`TodoReducer UpdateSuccess should update the todo state 1`] = `
Object {
  "allTodoFilter": 2,
  "allTodoFilterString": null,
  "entities": Object {
    "1": Object {
      "completed": false,
      "description": "some description",
      "id": "1",
      "title": "some title",
      "user": "1",
    },
    "2": Object {
      "completed": true,
      "description": "some description",
      "id": "2",
      "title": "anotherTodo",
      "user": "1",
    },
  },
  "ids": Array [
    "1",
    "2",
  ],
  "selectedTodoId": null,
}
`;

exports[`TodoReducer undefined action should return the default state 1`] = `
Object {
  "allTodoFilter": 2,
  "allTodoFilterString": null,
  "entities": Object {},
  "ids": Array [],
  "selectedTodoId": null,
}
`;
